Bug 249893 - Cannot view senders email address
Summary: Cannot view senders email address
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-02 13:36 UTC by Felix Wolfsteller
Modified: 2010-10-25 10:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-02 13:36:47 UTC
When sender specified a mail, I cannot access the senders email adress from the KMail Mobile Application.

This might be critical in various scenarios (e.g. two "Steve Miller" are known).

I expected to find something like a "View Header" item in the Actions flap or being able to touch the (blue) header in the view for more info. 

Observed in 4:4.5~20100902.1170752-1maemo1.1170522 .
Comment 1 Bertjan Broeksema 2010-10-20 15:01:13 UTC
SVN commit 1187801 by bbroeksema:

Display the name + email address.

BUG: 249893


 M  +3 -6      headerstyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187801
Comment 2 Felix Wolfsteller 2010-10-25 10:10:47 UTC
Confirming fix, version 4:4.6~20101025.1189387-1maemo1.1188357 .