Display the name + email address.

BUG: 249893

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1187801